<resources>
	<string name="app_name">PlantPilot</string>
	<string name="hint_plant_name">Fill name…</string>
	<string name="hint_plant_description">Fill description of the plant…</string>
	<string name="button_save">Save</string>
	<string name="item_added">Plant has been saved…</string>
	<string name="item_updated">Plant has been updated…</string>
	<string name="item_removed">Plant has been removed…</string>
	<string name="item_not_removed">Plant has not been removed…</string>
	<string name="empty_not_saved">Plant not saved because there are empty fields…</string>
	<string name="confirm_deletion_question">Do you want to delete the plant?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="confirm_deletion_title">Confirm deletion</string>
	<string name="plant_archived">The Plant has been archived</string>
	<string name="action_settings">Settings\n</string>
	<string name="button_capture_image">Add photo</string>
	<string name="button_capture_image_taken">Change photo</string>
	<string name="captured_plant_image_description">captured_plant_photo</string>
    <string name="apikey">r3XOrfqcAO0psBzPZ7ACt5PsRxjggR1lDhsbkVWpu1zGI7osXr</string>
    <string name="time_for_watering">Time for watering!</string>
	<string name="scheduled_notifications">Scheduled Notifications</string>
	<string name="youtube_not_installed">Aplikacja YouTube nie jest zainstalowana</string>
	<string name="no_app_to_open_youtube">Brak aplikacji do obsługi wyszukiwania w YouTube</string>
	<string name="youtube_link">https://www.youtube.com/results?search_query=</string>
	<string name="youtube_package">com.google.android.youtube</string>
    <string name="watering_weekday">Watering weekday:</string>
	<string name="watering_time">Watering time:</string>
    <string name="plant_name">Name\n</string>
	<string name="plant_description">Description</string>
	<string name="watering_day">Watering Day:</string>
</resources>