<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:id="@+id/edit_plant_activity">

	<ImageView
			android:id="@+id/captured_plant_image"
			android:layout_width="@dimen/captured_image_size"
			android:layout_height="@dimen/captured_image_size"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/big_padding"
			android:contentDescription="@string/captured_plant_image_description"/>

	<Button
			android:id="@+id/capture_plant_image_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_capture_image"
			android:layout_marginTop="@dimen/big_padding"
			android:layout_marginBottom="@dimen/big_padding"
			android:layout_gravity="center"
			android:textSize="18sp"/>

	<EditText
			android:id="@+id/edit_plant_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="sans-serif-light"
			android:hint="@string/hint_plant_name"
			android:inputType="textAutoComplete"
			android:padding="@dimen/small_padding"
			android:layout_marginBottom="@dimen/big_padding"
			android:layout_marginTop="@dimen/big_padding"
			android:textSize="18sp"/>

	<EditText
			android:id="@+id/edit_plant_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="sans-serif-light"
			android:hint="@string/hint_plant_description"
			android:inputType="textAutoComplete"
			android:padding="@dimen/small_padding"
			android:layout_marginBottom="@dimen/big_padding"
			android:layout_marginTop="@dimen/big_padding"
			android:textSize="18sp"/>

	<Spinner
			android:id="@+id/spinner_weekday"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>


	<TimePicker
			android:id="@+id/timePicker_watering_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:scaleX="0.7"
			android:scaleY="0.7"
			android:layout_marginLeft="-30dp"
			android:layout_marginRight="-30dp"
			android:timePickerMode="spinner"
			android:layout_gravity="center"/>

	<Button
			android:id="@+id/button_save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/buttonColor"
			android:text="@string/button_save"/>
</LinearLayout>