<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
								   xmlns:app="http://schemas.android.com/apk/res-auto"
								   android:layout_width="match_parent"
								   android:layout_height="wrap_content"
								   android:layout_margin="@dimen/small_padding"
								   app:cardCornerRadius="8dp"
								   app:cardBackgroundColor="@color/cardColor"
								   app:cardElevation="4dp">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/small_padding">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					android:id="@+id/plant_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/plant_name"
					android:textSize="18sp"
					android:textStyle="bold"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="4dp"/>

			<ImageButton
					android:id="@+id/info_button"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:src="@drawable/ic_explore_24"
					android:background="?attr/selectableItemBackgroundBorderless"
					android:layout_gravity="end"
					android:layout_marginEnd="8dp"/>
		</LinearLayout>

		<TextView
				android:id="@+id/plant_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/plant_description"
				android:textSize="16sp"
				android:layout_marginBottom="8dp"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					android:id="@+id/plant_watering_day_label"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/watering_day"
					android:textSize="16sp"
					android:textStyle="bold"/>

			<TextView
					android:id="@+id/plant_watering_day"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="16sp"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					android:id="@+id/plant_watering_time_label"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/watering_time"
					android:textSize="16sp"
					android:textStyle="bold"/>

			<TextView
					android:id="@+id/plant_watering_time"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="16sp"/>
		</LinearLayout>

	</LinearLayout>

</androidx.cardview.widget.CardView>
